# SEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Depends/Box2D/HelloWorld/: HelloWorld.cpp
Depends/Lib/Box2D/Debug/: Box2D.lib
Depends/Lib/Box2D/Release/: Box2D.lib
Depends/Lib/OpenGL/: glfw3.lib
Depends/SDL/: CMakeLists.txt
Depends/SDL/SDL iOS Application/SDL/SDL.xcodeproj/: project.pbxproj
Depends/SDL/SDL iOS Application/SDL/SDL.xcodeproj/project.xcworkspace/xcshareddata/: SDL.xccheckout
Depends/SDL/SDL iOS Application/SDL/SDL.xcodeproj/project.xcworkspace/xcuserdata/mateusz.xcuserdatad/: UserInterfaceState.xcuserstate
Depends/SOIL_DEP/: SOIL.lib
SeanEngine/: SeanEngine.sln
SeanEngine/SeanEngine/: AssetLoader.cpp  AssetLoader.h  BodyLookup.cpp  Enums.h  GSPlay.cpp  GameHandler.cpp  GameInput.h  Input.cpp  Main.cpp  MovementHandler.cpp  MovementHandler.h  PlayerMovementHandler.cpp  PlayerMovementHandler.h  PlayerSpriteHandler.cpp  PlayerSpriteHandler.h  Projectile.cpp  Projectile.h  ResourceManager.cpp  ResourceManager.h  Rope.cpp  Rope.h  SPhysics.cpp  SeanEngine.vcxproj  SeanEngine.vcxproj.filters  SeanRoom.cpp  SeanRoom.h  StateGen.h  WeaponState.cpp  WeaponState.h  defs.h  stateHandlerGen.cpp  stateHandlerGen.h  toml.h  world.h
SeanEngine/SeanEngine/Debug/: gamehandler.nativecodeanalysis.xml  vc120.idb
SeanEngine/SeanEngine/Debug/SeanEngine.tlog/: CL.read.1.tlog  CL.write.1.tlog  SeanEngine.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SeanEngine/SeanEngine/Release/SeanEngine.tlog/: CL.read.1.tlog  CL.write.1.tlog  SeanEngine.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SeanEngine/SeanEngine/assets/: ShaderDebug.fragment  ShaderDebug.vertex  shader.fragment
SeanEngine/SeanEngine/testAssets/: assets.toml  shader.vertex
cmake/: FindBox2D.cmake  FindGLEW.cmake  FindOpenGL.cmake  FindSDL2.cmake
src/: AnimPackage.h  BodyLookup.h  DataLoader.cpp  DataLoader.h  Event.h  EventQueue.h  EventStaticQueue.h  GFX.cpp  GFX.h  GFXPkg.h  GSPlay.h  Game.cpp  Game.h  GameData.h  GameHandler.cpp  GameHandler.h  GameInput.h  GameTick.h  GfxLine.h  Input.h  JointLookup.cpp  JointLookup.h  Main.cpp  Physics.h  PhysicsUtils.h  Projectile.cpp  Projectile.h  Rope.h  SPhysics.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.h  Utils.h  Vector.cpp  Vector.h  toml.h  world.cpp  world.h
testAssets/: assets.toml~  strip pngs (remove ICCP).bat
(+2 files in other folders)
